fix(read-receipts): threadlist icon vert align and placeholder when missing

--- a/internal_packages/open-tracking/stylesheets/main.less
+++ b/internal_packages/open-tracking/stylesheets/main.less
@@ -3,7 +3,6 @@
 
 .open-tracking-icon img.content-mask.unopened {
   background-color: #6b777d;
-  vertical-align: text-bottom;
 }
 .open-tracking-icon img.content-mask.opened {
   background-color: @text-color-link;
@@ -19,6 +18,7 @@
   font-weight: bold;
 }
 .open-tracking-icon {
+  width: 15px;
 }
 
 .read-receipt-message-status {
